fix: 🐛 old blog style markdown

--- a/articles/1f1572cfd2e375.md
+++ b/articles/1f1572cfd2e375.md
@@ -11,7 +11,8 @@ published_at: 2021-06-05
 この記事は、2021-06-05に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
-::: tip この記事で紹介した手順をライブラリ化して公開しました🎉
+:::message
+この記事で紹介した手順をライブラリ化して公開しました🎉
 [こちらの別記事](https://zenn.dev/ttskch/articles/8ee0eaaabf0657) で使い方など詳しくご紹介していますので、ぜひご参照ください！
 :::
 
