fix: 🐛 replace <details> to :::details

--- a/articles/52cb844302a216.md
+++ b/articles/52cb844302a216.md
@@ -364,7 +364,7 @@ ORDER BY
 
 > Doctrine Migrationsを使用している場合でも、以下（展開してご覧ください）のように `CREATE VIEW` と `DROP VIEW` を `up()` `down()` に適切に記述してあげることで問題なくマイグレーションが可能です。
 > 
-> <details>
+> :::details 表示する
 > 
 > ### 初版の作成
 > 
@@ -425,7 +425,7 @@ ORDER BY
 > }
 > ```
 > 
-> </details>
+> :::
 
 こうして作ったビューを以下のようにエンティティにマッピングします。
 
