--- a/articles/7423c0ab5104fd.md
+++ b/articles/7423c0ab5104fd.md
@@ -111,7 +111,7 @@ number: 123
 ````
 ```
 ---
-タイトル: "上書きタイトル"
+title: "上書きタイトル"
 date: 2020-05-20
 ---
 ```
@@ -138,7 +138,7 @@ date: 2020-05-20
 
 ```
 ---
-タイトル: "上書きタイトル"
+title: "上書きタイトル"
 date: 2020-05-20
 ---
 ```
