--- a/articles/135c5567bf065c.md
+++ b/articles/135c5567bf065c.md
@@ -30,7 +30,7 @@ published_at: 2020-11-13
 
 esa2githubは、無料＆ノーコードでHerokuにデプロイして利用できるように作ってあります。
 
-> <a href="https://heroku.com/deploy?template=https://github.com/ttskch/esa2github" rel="nofollow"><img src="https://camo.githubusercontent.com/6979881d5a96b7b18a057083bb8aeb87ba35fc279452e29034c1e1c49ade0636/68747470733a2f2f7777772e6865726f6b7563646e2e636f6d2f6465706c6f792f627574746f6e2e737667" alt="Deploy to Heroku" data-canonical-src="https://www.herokucdn.com/deploy/button.svg" style="max-width:100%;"></a>
+> [![Deploy to Heroku](https://camo.githubusercontent.com/6979881d5a96b7b18a057083bb8aeb87ba35fc279452e29034c1e1c49ade0636/68747470733a2f2f7777772e6865726f6b7563646e2e636f6d2f6465706c6f792f627574746f6e2e737667)](https://heroku.com/deploy?template=https://github.com/ttskch/esa2github)
 >
 > このボタンでHerokuにデプロイできます。[README](https://github.com/ttskch/esa2github) を参考にして実際に使ってみてください👍
 
