[esa2github] Update post.

--- a/articles/2af4e5f2c116cf.md
+++ b/articles/2af4e5f2c116cf.md
@@ -2,9 +2,8 @@
 title: "API Platformで特定のエンティティにだけカスタムNormalizerを適用する"
 emoji: "🎻"
 type: "tech"
-topics: ["php", "symfony", "api-platform"]
+topics: ["php", "symfony", "apiplatform"]
 published: true
-published_at: 2022-08-24
 ---
 
 [API Platform](https://api-platform.com/) で以下のシチュエーションに遭遇してカスタムNormalizerを書いたのでメモです。
