[esa2github] Update post.

--- a/articles/2af4e5f2c116cf.md
+++ b/articles/2af4e5f2c116cf.md
@@ -6,6 +6,41 @@ topics: ["php", "symfony", "apiplatform"]
 published: true
 ---
 
+# 2022/09/01 追記
+
+* 今回やりたかった日付プロパティのフォーマット変更だけなら、カスタムNormalizerを書くまでもなく、[プロパティに `#[Context([DateTimeNormalizer::FORMAT_KEY => 'H:i'])]` をつける](https://api-platform.com/docs/core/serialization/#property-normalization-context) だけで対応できることに気づきました🙏
+* アトリビュートではなくYAMLファイルで設定したい場合は以下のような書き方で対応できます
+    * ドキュメントのどこにも書いておらずググっても誰も言及していなかったので [この辺のコード](https://github.com/symfony/serializer/blob/5.4/Mapping/Loader/YamlFileLoader.php#L105-L120) を判読しました🙄
+    * コンテキストの定義の側にも対象のgroupsを書かないといけない仕様で、記述が重複してしまうので、下記の例ではYAMLのanchor/aliasを使ってDRYにしています
+    
+```yml
+App\Entity\Foo:
+  attributes:
+    timeProperty:
+      groups: &groups
+        - foo:read
+        - foo:write
+      # - etc...
+      contexts:
+        - groups: *groups
+          context:
+            datetime_format: H:i
+```
+
+* また、そもそもすべての日付系プロパティのデフォルトのフォーマットが初期設定だと `Y-m-d\TH:i:sP` なので、これを `Y-m-d H:i:s` に変更したい場合は、[ここに書かれている要領で](https://symfony.com/doc/5.4/serializer.html#serializer-context) 以下のような設定をすればOKです
+
+```yml
+# config/packages/framework.yaml
+framework:
+  serializer:
+    default_context:
+      datetime_format: Y-m-d H:i:s
+```
+
+**追記ここまで**
+
+---
+
 [API Platform](https://api-platform.com/) で以下のシチュエーションに遭遇してカスタムNormalizerを書いたのでメモです。
 
 # やりたかったこと
