--- a/articles/4c1612a99b1459.md
+++ b/articles/4c1612a99b1459.md
@@ -85,7 +85,7 @@ published_at: 2020-02-25
 * 単純に面倒
 * ミスりそう
 * **ミスったときにデータの不整合が発生してしまう**
-    * 例えば、上記の例で3行のうち1行だけ記事タイトルを変更し忘れてしまった場合、「どっちが正しい記事タイトルなのか」が分からなくなってしまいます :roll_eyes: 
+    * 例えば、上記の例で3行のうち1行だけ記事タイトルを変更し忘れてしまった場合、「どっちが正しい記事タイトルなのか」が分からなくなってしまいます🙄
 
 という問題があることが分かると思います。
 
