--- a/articles/4c1612a99b1459.md
+++ b/articles/4c1612a99b1459.md
@@ -2,7 +2,7 @@
 title: "[超入門] ド素人でも理解できる！世界一丁寧なデータベース/SQLの教科書"
 emoji: "📝"
 type: "idea"
-topics: ["データベース", "sql", "基礎"]
+topics: ["データベース", "sql", "mysql", "基礎"]
 published: true
 published_at: 2020-02-25
 ---
@@ -120,8 +120,9 @@ published_at: 2020-02-25
 
 データベースにデータを保存したり、データベースからデータを抽出したりといった操作するためには、 **SQL（エスキューエル：Structured Query Language）** という専用の言語を使う必要があります。
 
-> ちなみに、MySQLやPostgreSQLなどデータベースソフトごとにSQLの文法は多少違っていたりします（「方言」と表現されます）。
-> この講座ではMySQL用のSQLを扱います（この講座で扱う内容のレベルならほとんど方言による差異はないと思いますが）。
+ちなみに、MySQLやPostgreSQLなどデータベースソフトごとにSQLの文法は多少違っていたりします（「方言」と表現されます）。
+
+この講座ではMySQL用のSQLを扱いますが、この講座で扱う内容のレベルならほとんど方言による差異はありませんので、他のデータベースソフトを使う予定がある方もどうぞ安心して学んでください。
 
 データベースに対する操作は、
 
@@ -536,7 +537,7 @@ SELECT * FROM comment LIMIT 3;
 
 このような命令のことを **関数** といいます。
 
-例えば、[`DATE_FORMAT()` という「日付の表示形式を指定する関数」](https://dev.mysql.com/doc/refman/5.6/ja/date-and-time-functions.html#function_date-format) を使うと、以下のようなことができます。
+例えば、[MySQLの `DATE_FORMAT()` という「日付の表示形式を指定する関数」](https://dev.mysql.com/doc/refman/5.6/ja/date-and-time-functions.html#function_date-format) を使うと、以下のようなことができます。
 
 ```sql
 SELECT
@@ -555,11 +556,19 @@ FROM post;
 
 > [MySQLには実に様々な関数が用意されています](https://dev.mysql.com/doc/refman/5.6/ja/func-op-summary-ref.html)。興味があれば覗いてみてください😇
 
+なお、最初に「この講座で扱う内容のレベルならほとんど方言による差異はありません」と書きましたが、データベースソフトによる違いが最も大きいのが、用意されている関数の種類や名称です。
+
+これから紹介するような基本的な関数ならどのデータベースソフトでもほとんど同じ仕様で用意されていますが、例えば上記の `DATE_FORMAT()` 関数などは実はMySQL特有の関数で、他のデータベースソフトでは名称や仕様が異なっています。
+
+このような場合は、[`postgresql date_format`](https://www.google.com/search?q=postgresql+date_format&oq=postgresql+date_forma&ie=UTF-8) や [`microsoft access date_format`](https://www.google.com/search?q=microsoft+access+date_format&oq=microsoft+access+date_format&ie=UTF-8) などと検索してみれば、「目的のデータベースソフトには `DATE_FORMAT()` 相当の関数はあるのか、あるならどのような名称・仕様なのか」が簡単に調べられるかと思います👍
+
+ちなみに、PostgreSQLでは `TO_CHAR()`、Microsoft Accessでは `Format()` がそれぞれMySQLの `DATE_FORMAT()` の代替となる関数です。
+
 ### COUNT()
 
 データの一覧を取得するのではなく、 **データの個数だけを知りたい** という場合に役立つのが `COUNT()` 関数です。
 
-以下のように、特定に列名を `COUNT()` で囲う形で使用します。
+以下のように、特定の列名を `COUNT()` で囲う形で使用します。
 
 ```sql
 -- 投稿日が2020-03-01以降である記事の数
