[esa2github] Update post.

--- a/articles/44ef674d6e3b73.md
+++ b/articles/44ef674d6e3b73.md
@@ -1,5 +1,5 @@
 ---
-title: "SupabaseのローカルエミュレータでOAuthプロバイダーによるログインを行う手順"
+title: "SupabaseのローカルエミュレーターでOAuthプロバイダーによるログインを行う手順"
 emoji: "⚡"
 type: "tech"
 topics: ["supabase", "oauth", "nextjs"]
