[esa2github] Update post.

--- a/articles/44ef674d6e3b73.md
+++ b/articles/44ef674d6e3b73.md
@@ -75,9 +75,9 @@ const Callback: NextPage = () => {
 export default Callback
 ```
 
-# 3. `config.toml` を設定
+# 3. `supabase/config.toml` を設定
 
-最後に、ローカルのSupabaseエミュレーターの設定ファイルである `config.toml` に以下のような設定を追記します。
+最後に、ローカルのSupabaseエミュレーターの設定ファイルである `supabase/config.toml` に以下のような設定を追記します。
 
 OAuthクライアントID・シークレットは秘匿情報なので `.env.local` などに記載して `.gitignore` します。
 
