[esa2github] Update post.

--- a/articles/44ef674d6e3b73.md
+++ b/articles/44ef674d6e3b73.md
@@ -115,6 +115,7 @@ DEV_GOOGLE_SECRET={Googleのクライアントシークレット}
 ```json
 {
   "scripts": {
+    "supabase": "node_modules/supabase/bin/supabase",
     "supabase:start": "dotenv -c local -- bash -c 'yarn supabase start'",
     "supabase:stop": "dotenv -c local -- bash -c 'yarn supabase stop'",
   }
