[esa2github] Update post.

--- a/articles/44ef674d6e3b73.md
+++ b/articles/44ef674d6e3b73.md
@@ -118,6 +118,9 @@ DEV_GOOGLE_SECRET={Googleのクライアントシークレット}
     "supabase": "node_modules/supabase/bin/supabase",
     "supabase:start": "dotenv -c local -- bash -c 'yarn supabase start'",
     "supabase:stop": "dotenv -c local -- bash -c 'yarn supabase stop'",
+  },
+  "devDependencies": {
+    "supabase": "^1.4.5",
   }
 }
 ```
