--- a/articles/44ef674d6e3b73.md
+++ b/articles/44ef674d6e3b73.md
@@ -117,10 +117,10 @@ DEV_GOOGLE_SECRET={Googleのクライアントシークレット}
   "scripts": {
     "supabase": "node_modules/supabase/bin/supabase",
     "supabase:start": "dotenv -c local -- bash -c 'yarn supabase start'",
-    "supabase:stop": "dotenv -c local -- bash -c 'yarn supabase stop'",
+    "supabase:stop": "dotenv -c local -- bash -c 'yarn supabase stop'"
   },
   "devDependencies": {
-    "supabase": "^1.4.5",
+    "supabase": "^1.4.5"
   }
 }
 ```
