[esa2github] Update post.

--- a/articles/44ef674d6e3b73.md
+++ b/articles/44ef674d6e3b73.md
@@ -53,6 +53,8 @@ supabaseClient.auth.signIn(
 
 そして、認証完了後のリダイレクト先として指定した `/auth/callback` ページを実装します。
 
+このページに、アクセストークンなどがURLのフラグメントに付加された状態でリダイレクトされてきて、`@supabase/auth-helpers` の `<UserProvider>` によってそれがパースされてユーザーがログインした状態になるので、 `useUser()` によってログインしたユーザーの情報を取得できます。
+
 ```tsx
 // pages/auth/callback.tsx
 
@@ -74,6 +76,15 @@ const Callback: NextPage = () => {
 
 export default Callback
 ```
+
+ちなみに、Supabase AuthではOAuthプロバイダーからユーザーのメールアドレスを受け取り、メールアドレスによってユーザーの一意性を決定します。
+
+なので、例えばユーザーが
+
+1. まずメールアドレスとパスワードでサインアップ
+2. `1.` で登録したメールアドレスと同じメールアドレスが登録されているSNSアカウントでOAuthログイン
+
+などの手順を踏んだ場合、`2.` では新しいユーザーは作成されず、`1.` で作られたユーザーがログインしたものと見なされます。
 
 # 3. `supabase/config.toml` を設定
 
@@ -132,7 +143,7 @@ $ yarn supabase:start
 $ yarn supabase:stop
 ```
 
-でエミュレーターの起動と終了ができます。
+で、OAuthプロバイダーからのリダイレクトを正しく捌ける状態のエミュレーターを起動・終了できます。
 
 # 4. おまけ：CIでマイグレーションをしている場合はCI環境にも環境変数を適当に設定
 
