[esa2github] Update post.

--- a/articles/44ef674d6e3b73.md
+++ b/articles/44ef674d6e3b73.md
@@ -68,7 +68,13 @@ const Callback: NextPage = () => {
   const router = useRouter()
 
   useEffect(() => {
-    user && router.replace('/')
+    if (user) {
+      // 「ソーシャルアカウントでログインしました」などのtoastを表示したり
+      // auth.usersテーブルとは別にpublic.profilesテーブルなどがある場合はユーザーデータを取得して状態を保存したり
+      // をここで行う
+      
+      router.replace('/')
+    }
   }, [user, router])
 
   return <></>
@@ -76,6 +82,10 @@ const Callback: NextPage = () => {
 
 export default Callback
 ```
+
+> `supabaseClient.auth.signIn()` の第2引数で `redirectTo` を指定して専用のコールバック処理ページを設けるのは必須の対応ではないですが、こうしないと、ログイン後はトップページに `#access_token=xxxxx&...` のような長〜いフラグメントが付加されたURLで戻ってくるので体験が良くないのと、専用のページに戻ってくるようにしておけば「ソーシャルアカウントでログインしました」といったtoastを表示するなどログイン手法ごとの処理を気軽に追加できるのでおすすめです。
+
+## ちなみに
 
 ちなみに、Supabase AuthではOAuthプロバイダーからユーザーのメールアドレスを受け取り、メールアドレスによってユーザーの一意性を決定します。
 
