--- a/articles/ebc846ce90713c.md
+++ b/articles/ebc846ce90713c.md
@@ -165,7 +165,11 @@ Gmailに転送するのであれば、迷惑メールフィルタリングはGma
 
 ### [Mailgun](https://www.mailgun.com/)
 
-個人的に昔からプログラムからのメール送信にはMailgunをずっと使っていて、メールの受信もMailgunに統一できたら嬉しかったのですが、無料プランでは受信はできず、[$35月〜](https://www.mailgun.com/pricing) とかなり高かったので断念しました。
+個人的に昔からプログラムからのメール送信にはMailgunをずっと使っていて、メールの受信もMailgunに統一できたら嬉しかったのですが、~~無料プランでは受信はできず、[$35月〜](https://www.mailgun.com/pricing) とかなり高かったので断念しました。~~
+
+**追記：**
+
+有料プランでないとメールの受信はできないというのは勘違いでした。無料プラン（料金ページには記載がありませんが、無料トライアル終了後に放置せず明示的に選択することでFlexプランという無料プランを利用できます）でも送信と合わせて月1000通までなら受信メールの転送が利用できるので、有力な選択肢になると思います。
 
 ### [Amazon SES](https://aws.amazon.com/jp/ses/)
 
