[esa2github] Update post.

--- a/articles/c52e78d3adbc35.md
+++ b/articles/c52e78d3adbc35.md
@@ -2,7 +2,7 @@
 title: "Chakra UIでモーダルの中にTableContainerを入れた場合にスマホ表示でモーダルの左右にマージンを持たせる方法"
 emoji: "🥷"
 type: "tech"
-topics: ["chakraui", "nextjs"]
+topics: ["chakraui", "react"]
 published: true
 ---
 
