[esa2github] Update post.

--- a/articles/874ab5a763ce4f.md
+++ b/articles/874ab5a763ce4f.md
@@ -63,7 +63,7 @@ class Customer extends User
 さらに、（どういうドメインか謎ですが）複数の `User` を束ねる `Cluster` というものを考えます。
 
 ```php
-// src/Entity/Customer.php
+// src/Entity/Cluster.php
 
 #[ORM\Entity(repositoryClass: ClusterRepository::class)]
 class Cluster
