[esa2github] Update post.

--- a/articles/874ab5a763ce4f.md
+++ b/articles/874ab5a763ce4f.md
@@ -68,7 +68,7 @@ class Customer extends User
 #[ORM\Entity(repositoryClass: ClusterRepository::class)]
 class Cluster
 {
-    #[ORM\OneToMany(targetEntity: User::class, mappedBy: 'cluster')]
+    #[ORM\OneToMany(targetEntity: User::class)]
     private Collection $users;
 }
 ```
