[esa2github] Update post.

--- a/articles/874ab5a763ce4f.md
+++ b/articles/874ab5a763ce4f.md
@@ -92,6 +92,8 @@ $qb = $clusterRepository->createQueryBuilder('cl')
 ;
 ```
 
+こんなふうに、`User` とJOINしたあとにさらに `Shop` や `Customer` とも `'WITH' でJOINしてしまえば所望の処理を実現できます。
+
 # 参考
 
 * [php - Doctrine2: Polymorphic Queries: Searching on properties of subclasses - Stack Overflow `#27284741`](https://stackoverflow.com/questions/7720138/doctrine2-polymorphic-queries-searching-on-properties-of-subclasses/27284741#27284741)
