[esa2github] Update post.

--- a/articles/874ab5a763ce4f.md
+++ b/articles/874ab5a763ce4f.md
@@ -92,7 +92,7 @@ $qb = $clusterRepository->createQueryBuilder('cl')
 ;
 ```
 
-こんなふうに、`User` とJOINしたあとにさらに `Shop` や `Customer` とも `'WITH' でJOINしてしまえば所望の処理を実現できます。
+こんなふうに、`User` とJOINしたあとにさらに `Shop` や `Customer` とも `WITH` でJOINしてしまえば所望の処理を実現できます。
 
 # 参考
 
