[esa2github] Update post.

--- a/articles/874ab5a763ce4f.md
+++ b/articles/874ab5a763ce4f.md
@@ -13,6 +13,7 @@ published: true
 * Doctrineの [Single Table Inheritance（STI）](https://www.doctrine-project.org/projects/doctrine-orm/en/2.7/reference/inheritance-mapping.html#single-table-inheritance) を使っているエンティティがある
 * このSTIの基底クラスをOneToManyで所有する別のエンティティがある
 * このエンティティを、QueryBuilderを使ってSTIの派生クラスとJOINしたい
+* （そして、派生クラス特有のプロパティに対してWHERE句で絞り込みなどをしたい）
 
 # やり方
 
