--- a/articles/3fe79a9c4c266a.md
+++ b/articles/3fe79a9c4c266a.md
@@ -11,7 +11,7 @@ published_at: 2020-04-17
 この記事は、2020-04-17に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
-タイトルのとおりなのですが補足も含めて長々と書きます。結論は [こちら](#実はプロパティとgetter-setterを追加してくれるtraitがあった)。
+タイトルのとおりなのですが補足も含めて長々と書きます。結論は [こちら](#実はプロパティとgetter%2Fsetterを追加してくれるtraitがあった)。
 
 # Doctrine extensionsとは
 
