--- a/articles/57135cbb9dc722.md
+++ b/articles/57135cbb9dc722.md
@@ -23,7 +23,7 @@ $ composer install --no-dev --prefer-dist --optimize-autoloader --no-interaction
 
 つまり、 `require-dev` で依存しているライブラリはインストールされません。
 
-しかし、ステージング環境としてHerokuを使っている場合など、アプリのデバッグモードをONにするために `require-dev` の依存もインストールしたいことがあります。
+しかし、ステージング環境としてHerokuを使っている場合など、一時的にアプリのデバッグモードをONにするために `require-dev` の依存もインストールしたいことがあります。
 
 > 例えばSymfonyなら、無造作にHerokuの環境変数で [`APP_ENV`](https://symfony.com/doc/current/configuration.html#selecting-the-active-environment) を `dev` にしてしまうと、 `require-dev` で依存しているクラスが見つからず `ClassNotFoundError` になってしまいます。
 > 
@@ -31,13 +31,13 @@ $ composer install --no-dev --prefer-dist --optimize-autoloader --no-interaction
 
 # 解決策
 
-強引な方法ですが、 `composer install` コマンドの実行後に
+Herokuでは `composer install` コマンドの実行後に
 
 ```bash
 composer compile --no-dev --no-interaction
 ```
 
-という [カスタムコマンド](https://getcomposer.org/doc/articles/scripts.md#writing-custom-commands) が実行される仕様（[参考](https://devcenter.heroku.com/articles/php-support#custom-compile-step)）なので、ここで改めて `require-dev` の依存をインストールするようにしてあげれば解決できます。（完全に二度手間でまったく美しくないですが…）
+という [カスタムコマンド](https://getcomposer.org/doc/articles/scripts.md#writing-custom-commands) が実行される仕様（[参考](https://devcenter.heroku.com/articles/php-support#custom-compile-step)）なので、ここで改めて `require-dev` の依存をインストールするようにしてあげれば解決できます。
 
 ```json
 # composer.json
@@ -50,13 +50,25 @@ composer compile --no-dev --no-interaction
 }
 ```
 
-> データベースのマイグレーションコマンドなんかもこの `compile` カスタムコマンド内で実行するのがセオリーですね。
+ただし、これだと普段 `APP_ENV=prod` で運用しているときにも常に `composer install` が2回実行されることになり非効率なので、以下のように `APP_ENV=dev` の場合にのみ実行するようにしておくのがよいでしょう。
+
+```json
+{
+    "scripts": {
+        "compile": [
+            "if [ $APP_ENV = 'dev' ]; then composer install --prefer-dist --optimize-autoloader --no-interaction; fi",
+        ]
+    },
+}
+```
+
+> ちなみに、データベースのマイグレーションコマンドなんかもこの `compile` カスタムコマンド内で実行するのがセオリーですね。
 > 
 > ```json
 > {
 >     "scripts": {
 >         "compile": [
->             "composer install --prefer-dist --optimize-autoloader --no-interaction",
+>             "if [ $APP_ENV = 'dev' ]; then composer install --prefer-dist --optimize-autoloader --no-interaction; fi",
 >             "php bin/console doctrine:migrations:migrate -n --no-debug"
 >         ]
 >     },
@@ -82,6 +94,8 @@ composer compile --no-dev --no-interaction
 
 # ちなみに：Symfonyの場合の注意点
 
+## 注意点1
+
 なお、先に挙げたSymfonyを `APP_ENV=dev` で動かしたいというケースでは、たとえこの方法で `require-dev` の依存をインストールするとしても、デプロイの時点で `APP_ENV=dev` をセットしてしまっていると `ClassNotFoundError` になります。
 
 なぜなら、1回目の `composer install --no-dev` の直後に `post-install-cmd` フックで `bin/console cache:clear` などを実行するためにSymfonyが起動されてしまうからです。
@@ -101,6 +115,29 @@ composer compile --no-dev --no-interaction
 
 > 参考：[Symfony4.4をGAE/phpで動かす | polidog lab](https://polidog.jp/2020/06/17/symfony_gae/)
 
+## 注意点2
+
+ここまでの対応だと、Herokuで実際に画面を開いたときに
+
+```
+Mixed Content: The page at 'https://xxx.herokuapp.com' was loaded over HTTPS, but requested an insecure XMLHttpRequest endpoint 'http://xxx.herokuapp.com/_wdt/xxxxxx'. This request has been blocked; the content must be served over HTTPS.
+```
+
+といったエラーによりデバッグツールバーが表示されないかもしれません。
+
+この場合、`config/packages/framework.yaml` に以下のような設定を追記することでエラーを解消できます。
+
+> 信頼できるリバースプロキシに対してしかアプリケーションサーバーが応答しないように構成されていることが前提の設定です。Heroku以外の環境で同様の設定を行う場合は十分に注意してください。
+
+```yaml
+when@dev:
+  framework:
+    trusted_proxies: REMOTE_ADDR
+```
+
+> 参考：[How to Configure Symfony to Work behind a Load Balancer or a Reverse Proxy (Symfony Docs) `#but-what-if-the-ip-of-my-reverse-proxy-changes-constantly`](https://symfony.com/doc/current/deployment/proxies.html#but-what-if-the-ip-of-my-reverse-proxy-changes-constantly)
+
+
 # まとめ
 
-* PHPプロジェクトをHerokuへデプロイする際にrequire-devの依存もインストールしたければ、 `compile` カスタムスクリプト内で改めて `composer install` してあげればよい（美しくはないけど）
+* PHPプロジェクトをHerokuへデプロイする際にrequire-devの依存もインストールしたければ、`APP_ENV=dev` の場合にのみ `compile` カスタムスクリプト内で改めて `composer install` してあげればよい
