--- a/books/a3800fc0912fbb/14.md
+++ b/books/a3800fc0912fbb/14.md
@@ -219,7 +219,7 @@ class JsonSearchFilter extends SearchFilter
             switch ($strategy) {
                 case self::STRATEGY_PARTIAL:
                     $ors[] = $queryBuilder->expr()->like(
-                        sprintf('json_to_text(%s)', $wrapCase($aliasedField)),
+                        $wrapCase(sprintf('json_to_text(%s)', $aliasedField)),
                         $wrapCase((string) $queryBuilder->expr()->concat("'%'", $keyValueParameter, "'%'"))
                     );
                     break;
