--- a/articles/89190c80066510.md
+++ b/articles/89190c80066510.md
@@ -23,7 +23,10 @@ $ brew install php@8.1
 
 ```bash
 # php@8.1がリンクされている状態で
-$ pecl install apcu xdebug redis # etc
+$ pecl install apcu
+$ pecl install xdebug
+$ pecl install redis
+# etc
 ```
 
 # 3. php.iniを必要に応じて修正
