--- a/articles/3e846a1aa5eb40.md
+++ b/articles/3e846a1aa5eb40.md
@@ -251,7 +251,7 @@ $builder
 
 `by_reference` の意味については
 
-> [[Symfony/Form] DateTimeTypeなどの必須項目がInvalidArgumentExceptionになる時に読む記事](https://zenn.dev/ttskch/articles/949adee91db98f#%E3%81%9D%E3%82%82%E3%81%9D%E3%82%82-by-reference-%E3%81%A8%E3%81%AF)
+> [[Symfony/Form] DateTimeTypeなどの必須項目がInvalidArgumentExceptionになる時に読む記事](https://zenn.dev/ttskch/articles/949adee91db98f#%E3%81%9D%E3%82%82%E3%81%9D%E3%82%82-by_reference-%E3%81%A8%E3%81%AF)
 
 こちらの別記事の中でも詳細に説明しているので、ぜひ参考にしてみてください。
 
