[esa2github] Update post.

--- a/articles/c8862e74991e9e.md
+++ b/articles/c8862e74991e9e.md
@@ -64,7 +64,7 @@ class UserChoiceByStateType extends AbstractType
 
 しかし、この方法ではあくまで絞り込みの処理はDBレイヤーに任せるしかなく、PHP側の処理でフィルタリングすることはできません。
 
-そんなことしたくなるケースは稀ではありますが、例えばユーザーのROLEを元にフィルタリングしたい場合などは、[`role_hierarchy`](https://symfony.com/doc/current/security.html#hierarchical-roles) が設定されているとDBのカラムには必ずしも当該ROLEの文字列が格納されていない場合があるため、あくまでPHP側でSecurity Componentを使って判定する必要があります。
+そんなことをしたくなるケースは稀ではありますが、例えばユーザーのROLEを元にフィルタリングしたい場合などは、[`role_hierarchy`](https://symfony.com/doc/current/security.html#hierarchical-roles) が設定されているとDBのカラムには必ずしも当該ROLEの文字列が格納されていない場合があるため、あくまでPHP側でSecurity Componentを使って判定する必要があります。
 
 この場合、以下のように  [`choice_loader`](https://symfony.com/doc/current/reference/forms/types/choice.html#choice-loader) を使えばやりたいことが実現できます。
 
