--- a/articles/fb5a700b37a504.md
+++ b/articles/fb5a700b37a504.md
@@ -40,10 +40,10 @@ $ uninstall_oh_my_zsh
 
 # 2. zinitをインストール
 
-[README](https://github.com/zdharma/zinit#option-1---automatic-installation-recommended) に書かれているとおり、ワンライナーで簡単にインストールできます。
+[README](https://github.com/zdharma-continuum/zinit#install) に書かれているとおり、ワンライナーで簡単にインストールできます。
 
 ```bash
-$ sh -c "$(curl -fsSL https://raw.githubusercontent.com/zdharma/zinit/master/doc/install.sh)"
+$ bash -c "$(curl --fail --show-error --silent --location https://raw.githubusercontent.com/zdharma-continuum/zinit/HEAD/scripts/install.sh)"
 
 # 途中、Enter y/n and press Return: と聞かれたら y を入力
 ```
@@ -61,10 +61,17 @@ $ zinit self-update
 
 ここからはお好みで `~/.zshrc` を修正して各種便利プラグインを入れたり細かい設定を変更したりしていきます。
 
-## サンプルをコピペ
+## READMEの例から必要そうなものをコピペ
 
-僕の場合はほとんどこだわりがないので、とりあえず [READMEに書かれている例](https://github.com/zdharma/zinit#example-usage) を丸っとコピペしました😇（[diff](https://github.com/ttskch/dotfiles/commit/52e4e533c206c9f8a45d85f22a8bbf4b99fd68e1)）
-ただし、[この行は不要なのでコメントアウトします](https://github.com/ttskch/dotfiles/commit/1685ba9435ba702a892254b2945ac2d0a5d30302)。
+僕の場合はほとんどこだわりがないので、とりあえずREADMEに書かれている例を参考に
+
+```
+zinit light zsh-users/zsh-autosuggestions
+zinit light zdharma/fast-syntax-highlighting
+zinit load zdharma/history-search-multi-word
+```
+
+あたりを追記しました。
 
 ## 補完の色を薄く
 
