[esa2github] Update post.

--- a/articles/c8862e74991e9e.md
+++ b/articles/c8862e74991e9e.md
@@ -1,6 +1,6 @@
 ---
 title: "[Symfony] EntityTypeの選択肢をquery_builderではなくPHPの処理でフィルタリングする"
-emoji: "🐘"
+emoji: "🎻"
 type: "tech"
 topics: ["php", "symfony", "doctrine"]
 published: true
@@ -107,4 +107,4 @@ class UserChoiceByRoleType extends AbstractType
 }
 ```
 
-> `choice_loader` を使ってPHP側で選択肢を用意するならEntityTypeではなくChoiceTypeを使えばいいのでは？と一瞬思いますが、それだと各選択肢が自動でエンティティにマッピングされないので自前でDataTransformerなどで変換しなければならなくなりますね。
+> `choice_loader` を使ってPHP側で選択肢を用意するならEntityTypeではなくChoiceTypeを使えばいいのでは？と一瞬思いますが、それだと各選択肢が自動でエンティティにマッピングされないので自前でDataTransformerなどで変換しなければならなくなります。
