[esa2github] Update post.

--- a/articles/507b4102fd4d76.md
+++ b/articles/507b4102fd4d76.md
@@ -48,7 +48,7 @@ class Foo
 
 これを解決できる実装を考えてみます。
 
-# 不完全な解決策
+# ❌ 不完全な解決策
 
 `symfony security isgranted specific user` とかでググると、
 
@@ -56,11 +56,13 @@ class Foo
 
 こんな感じの解決策が見つかります。
 
-`RoleHierarchyInterface::getReachableRoleNames()` を使って、「任意のユーザーがあるROLEを持っているかどうか」を検証しようというものですね。
+`RoleHierarchyInterface::getReachableRoleNames()` を使って、「指定したユーザーが、指定したROLEを持っているかどうか」を検証しようというものですね。
 
 例えば以下のようなサービスクラスを作っておくことで、便利に使えそうです。
 
 ```php
+namespace App\Security;
+
 use Symfony\Component\Security\Core\Role\RoleHierarchyInterface;
 use Symfony\Component\Security\Core\User\UserInterface;
 
@@ -77,6 +79,8 @@ class SecurityManager
 }
 ```
 ```php
+use App\Security\SecurityManager;
+
 class Foo
 {
     public function __construct(private SecurityManager $sm)
@@ -97,17 +101,19 @@ class Foo
 
 つまり、**「任意のユーザーがある対象物に対して特定の権限を持っているか」を検証することができず**、対応としては不完全です。
 
-# 完全な解決策
+# ⭕ 完全な解決策
 
 もとの `isGranted()` メソッドの実装を見てみると、最終的には [`AuthorizationCheckerInterface`](https://github.com/symfony/security/blob/b3eab8b37ff7b24d9c582770fd1cd57725895e3b/Core/Authorization/AuthorizationCheckerInterface.php) にバインドされている [`security.authorization_checker` というサービスの `isGranted()` を呼んでいる](https://github.com/symfony/security/blob/b3eab8b37ff7b24d9c582770fd1cd57725895e3b/Core/Security.php#L65-L69) ことが分かります。
 
-つまり、完全な対応をするには、***指定のユーザーが実際にログイン状態にあるような `AuthorizationCheckerInterface` の実体を用意して、それに対して `isGranted()` を呼んであげれば** よさそうです。
+つまり、完全な対応をするには、**指定のユーザーが実際にログイン状態にあるような `AuthorizationCheckerInterface` の実体を用意して、それに対して `isGranted()` を呼んであげれば** よさそうです。
 
 具体的には、以下のようなコードで実現可能です。
 
 > なぜこういうコードになるかは、Symfonyのコードを読んでみてください🙏
 
 ```php
+namespace App\Security;
+
 use Symfony\Component\Security\Core\Authentication\Token\Storage\TokenStorage;
 use Symfony\Component\Security\Core\Authorization\AccessDecisionManagerInterface;
 use Symfony\Component\Security\Core\Authorization\AuthorizationChecker;
@@ -135,6 +141,8 @@ class SecurityManager
 これで、標準の `isGranted()` とまったく同等の検証を、任意のユーザーに対して行うことができるようになりました。
 
 ```php
+use App\Security\SecurityManager;
+
 class Foo
 {
     public function __construct(private SecurityManager $sm)
