[esa2github] Update post.

--- a/articles/691fb62fbb6b1b.md
+++ b/articles/691fb62fbb6b1b.md
@@ -46,9 +46,9 @@ published: true
 細かい説明は後回しにして先に結論を言うと、最終的に以下のようなワークフローを書くことで期待どおりの結果を得ることができました🙌
 
 ```yaml
-# .github/workflows/deploy.yml
+# .github/workflows/ci.yaml
 
-name: deploy
+name: CI
 
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -57,8 +57,12 @@ env:
 on: push
 
 jobs:
+  test:
+    # 略
+
   preview:
     if: ${{ github.ref != 'refs/heads/release' }}
+    needs: test
     runs-on: ubuntu-latest
     environment:
       name: preview
@@ -91,6 +95,7 @@ jobs:
 
   prod:
     if: ${{ github.ref == 'refs/heads/release' }}
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -120,7 +125,7 @@ jobs:
 
 に書かれているとおりです。
 
-省略していますが、実際にはテストのジョブに依存（`needs`）させたかったので、ドキュメントの例とは違って1ファイルにまとめた上でジョブの `if` 文で対象のブランチを分けています。
+テストのジョブに依存（`needs`）させたかったので、ドキュメントの例とは違って1ファイルにまとめた上でジョブの `if` 文で対象のブランチを分けています。
 
 > この例では、本番にデプロイするブランチは `main` ではなく `release` です。
 >
