[esa2github] Update post.

--- a/articles/691fb62fbb6b1b.md
+++ b/articles/691fb62fbb6b1b.md
@@ -125,11 +125,11 @@ jobs:
 
 に書かれているとおりです。
 
-テストのジョブに依存（`needs`）させたかったので、ドキュメントの例とは違って1ファイルにまとめた上でジョブの `if` 文で対象のブランチを分けています。
+ただし、この例では、本番にデプロイするブランチは `main` ではなく `release` です。
 
-> この例では、本番にデプロイするブランチは `main` ではなく `release` です。
->
-> なお、[`workflow_run`](https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#workflow_run) を使えば別ファイルのワークフローに依存したワークフローを書けるので必ずしも1ファイルにまとめる必要はないのですが、個人的にこっちのほうが慣れてて分かりやすいのでこうしました。
+また、テストのジョブに依存（`needs`）させたかったので、ドキュメントの例とは違って1ファイルにまとめた上でジョブの `if` 文で対象のブランチを分けています。
+
+> [`workflow_run`](https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#workflow_run) を使えば別ファイルのワークフローに依存したワークフローを書けるので必ずしも1ファイルにまとめる必要はないのですが、個人的にこっちのほうが慣れてて分かりやすいのでこうしました。
 
 上記ドキュメントで言及されていないこともいくつかやっています。
 
