[esa2github] Update post.

--- a/articles/691fb62fbb6b1b.md
+++ b/articles/691fb62fbb6b1b.md
@@ -171,7 +171,7 @@ environment:
 > * `stg.my-service.com` という部分は、ステージング環境のドメインのつもりで書いています
 > * `my-team` という部分は、Vercelのチーム名のつもりで書いています
 
-Vercel標準のGitHub連携では、特定のブランチに対してサブドメインを割り当てるということがドメインの設定画面から簡単にできました（下図）が、今回はこれも手動で行う必要があるのです。
+Vercel標準のGitHub連携では、特定のブランチに対してサブドメインを割り当てるということがドメインの設定画面から簡単にできました（下図）が、今回はこれも手動で行う必要があるわけです。
 
 ![](https://img.esa.io/uploads/production/attachments/15064/2023/04/20/77821/9ce8cdcb-b2b8-4f9d-b866-f31b52b3877f.png)
 
