[esa2github] Update post.

--- a/articles/691fb62fbb6b1b.md
+++ b/articles/691fb62fbb6b1b.md
@@ -151,7 +151,10 @@ environment:
   url: ${{ steps.deploy.outputs.url }}
 ```
 
-で利用されており、これによって `preview` という名前のデプロイ環境にVercelのプレビューデプロイのURLが紐づくことになります。
+で利用されており、これによって `preview` という名前のデプロイ環境にVercelのプレビューデプロイのURLが紐づき、結果としてPRのConversationタブに下図のような行が出力され、PRの画面から直接プレビューデプロイを見に行くことができるようになります。
+
+![](https://img.esa.io/uploads/production/attachments/15064/2023/04/20/77821/b9c0de7d-6d47-4daa-8218-5fb48b0d23ed.png)
+
 
 > 参考
 >
