--- a/articles/1f1572cfd2e375.md
+++ b/articles/1f1572cfd2e375.md
@@ -8,7 +8,7 @@ published_at: 2021-06-05
 ---
 
 :::message
-この記事は、2021-06-05に別のブログ媒体に投稿した記事のアーカイブです。
+この記事は、2021-06-05に別のブログ媒体に投稿して [はてなブックマークで1,000以上ブックマークされた](https://b.hatena.ne.jp/entry/s/blog.ttskch.com/web-app-pdf-printing-best-practice/) 記事のアーカイブです。
 :::
 
 :::message
