[esa2github] Update post.

--- a/articles/eab8b40c1b02a0.md
+++ b/articles/eab8b40c1b02a0.md
@@ -18,6 +18,9 @@ name: CI
 on: push
 
 jobs:
+  test:
+    # 略
+
   git-pr-release:
     if: ${{ github.ref == 'refs/heads/main' }}
     needs: test
