[esa2github] Update post.

--- a/articles/dc3c09b71f73d4.md
+++ b/articles/dc3c09b71f73d4.md
@@ -98,7 +98,7 @@ class User
 +         'query_builder' => function (UserRepository $repository) {
 +             return $repository->createQueryBuilder('u')
 +                 ->leftJoin('u.team', 't')
-+                 ->addSelect(’t')
++                 ->addSelect('t')
 +             ;
           },
       ])
@@ -169,7 +169,7 @@ class UserAutocompleteField extends AbstractType
 
 ```php
 $builder
-    ->add(‘foo', UserAutocompleteField::class)
+    ->add('user', UserAutocompleteField::class)
 ;
 ```
 
