[esa2github] Update post.

--- a/articles/eab8b40c1b02a0.md
+++ b/articles/eab8b40c1b02a0.md
@@ -8,6 +8,14 @@ published: true
 
 [git-pr-release](https://github.com/x-motemen/git-pr-release) がリリースすべきPRが1つもないときにエラーになるのをCIでは無視したくて、標準エラー出力が `No pull requests to be released` を含む場合のみエラーを無視する、という対応をしたのですが、えらい苦労したのでやり方をメモしておきます🙄
 
+# 2023/06/28 追記
+
+この記事で解説している方法では、「git-pr-releaseがリリースすべきPRが1つもないときにエラーになる」件についてはどうやら完全には解決できないようだと判明しました😓
+
+リリースすべきPRが1つもないとき（＝mainブランチに直接コミットしたとき）には確かにエラーを無視できるのですが、その後PRをmainブランチにマージしてgit-pr-releaseが実行されたときに、エラーメッセージなしでエラーステータスで終了してしまう（PRは正常に作成または更新される）という挙動になるようです。（厳密には、``To use retry middleware with Faraday v2.0+, install `faraday-retry` gem`` というエラーになり、これを回避すべく `gem install faraday-retry` するように変更したところ、エラーメッセージなしでエラーステータスで終了してしまいました）
+
+特定のエラーメッセージによるエラーのみを無視する、というユースケースに対応できることは確かですが、ことgit-pr-releaseの `No pull requests to be released` に関してはこの方法で対処しても解決できないので、ご注意ください🙏
+
 # 最終的な設定内容
 
 ```yaml
