[esa2github] Update post.

--- a/articles/a5f8635e7e0f57.md
+++ b/articles/a5f8635e7e0f57.md
@@ -97,9 +97,10 @@ Symfony 6.1以前では [Custom Authenticator](https://symfony.com/doc/current/s
 方針として、
 
 * 開発環境においては、`.env.local` で環境変数を設定することによって、常にそのユーザーでログインした状態になるようにしたい
+* ただし、`.env.local` で特に環境変数が設定されていない場合は、本番環境と同様に実際にアクセストークンによってユーザー認証が行われるようにしたい
 * テスト環境においては、テスコード内から動的にログインさせるユーザーを指定できるようにしたい
 
-という2点を満たす実装を目指します。
+という3点を満たす実装を目指します。
 
 これを叶えるべく、まずは以下のようなデバッグ用の `AccessTokenHandler` を作ります。
 
@@ -115,41 +116,42 @@ use Symfony\Component\Security\Http\Authenticator\Passport\Badge\UserBadge;
 
 class DebugAccessTokenHandler implements AccessTokenHandlerInterface
 {
+    public function __construct(
+        private readonly AccessTokenHandlerInterface $decorated,
+        private readonly ?string $idaasId = null,
+    ) {
+    }
+
     public function getUserBadgeFrom(string $accessToken): UserBadge
     {
-        // アクセストークンとして渡された値をそのままキーにしてSymfonyユーザーを探す
-        return new UserBadge($accessToken);
+        // コンストラクタで $idaasId が注入されている場合はアクセストークンの内容にかかわらず $idaasId でログイン
+        // 注入されていない場合はデフォルトの AccessTokenHandler に処理を委譲
+        return $this->idaasId ? new UserBadge($this->idaasId) : $this->decorated->getUserBadgeFrom($accessToken);
     }
 }
 ```
 
-この上で、**環境変数またはリクエストヘッダーで指定されたIDaaS上のユーザーIDを、アクセストークンとして `DebugAccessTokenHandler` に渡す** ための [Custom AccessTokenHandler](https://symfony.com/doc/current/security/access_token.html#2-configure-the-token-extractor-optional) を実装します。
+このクラスのコンストラクタに
 
-```php
-<?php
+* 本番環境用の（前項で実装した）`AccessTokenHandler`
+* `.env.local` で環境変数によって指定された、`User::$idaasId` と照合したい値
 
-declare(strict_types=1);
+の2つをインジェクトしておけば、所望の動作を実現できそうです。`services.yaml` の設定内容は以下のようになるでしょう。
 
-namespace App\Dev\Security;
+```yaml
+# config/packages.services.yaml
 
-use Symfony\Component\HttpFoundation\Request;
-use Symfony\Component\Security\Http\AccessToken\AccessTokenExtractorInterface;
+# ...
 
-class DebugAccessTokenExtractor implements AccessTokenExtractorInterface
-{
-    public function __construct(private readonly string $idaasId = '')
-    {
-    }
-
-    public function extractAccessToken(Request $request): ?string
-    {
-        // コンストラクタで $idaasId がセットされている場合はその値を、セットされていない場合はリクエストヘッダーで指定された値を、アクセストークンとして返す
-        return $this->idaasId ?: $request->headers->get('x-debug-auth-idaas-id');
-    }
-}
+when@dev:
+  services:
+    App\Dev\Security\DebugAccessTokenHandler:
+      arguments:
+        - '@App\Security\AccessTokenHandler'
+        - '%env(DEBUG_AUTH_IDAAS_ID)%'
 ```
 
-あとは `security.yaml` で、開発環境・テスト環境においてのみ、もとの `AccessTokenHandler` の代わりに上記の `DebugAccessTokenHander` および `DebugAccessTokenExtractor` を使用するように設定してあげればOKというわけです。
+あとは `security.yaml` で、開発環境においてのみ、使用する `AccessTokenHandler` を差し替えてあげればよいでしょう。（後述しますが、テスト環境については実は特に差し替える必要なく任意のユーザーをログインさせることが可能です）
 
 ```yaml
 # config/packages/security.yaml
@@ -163,16 +165,66 @@ when@dev:
       main:
         access_token:
           token_handler: App\Dev\Security\DebugAccessTokenHandler
-          token_extractors: App\Dev\Security\DebugAccessTokenExtractor
-
-when@test:
-  security:
-    firewalls:
-      main:
-        access_token:
-          token_handler: App\Dev\Security\DebugAccessTokenHandler
-          token_extractors: App\Dev\Security\DebugAccessTokenExtractor
 ```
+
+> ちなみに、以下のように [サービスのデコレート機能](https://symfony.com/doc/current/service_container/service_decoration.html) を使えば `security.yaml` で `when@dev` の場合のみ `token_handler` を上書きするということ自体やらなくて済みそうな気がしますが、実際に試してみると、これだとデコレータである `DebugAccessTokenHandler` ではなく本体である `AccessTokenHandler` そのものが呼ばれてしまいます。`token_handler` に渡すサービスIDについては、デコレート機能は使えないようです。（要出典）
+>
+> ```yaml
+> # config/packages.services.yaml
+> 
+> # ...
+> 
+> when@dev:
+>   services:
+>     App\Dev\Security\DebugAccessTokenHandler:
+>       decorates: App\Security\AccessTokenHandler
+>       arguments:
+>         - '@.inner'
+>         - '%env(DEBUG_AUTH_IDAAS_ID)%'
+> ```
+
+さて、一見これで万事良さそうに思えますが、実はまだ足りません。
+
+このままだと、開発環境においても、**リクエストヘッダーでアクセストークンを送らない限り、そもそもこの `DebugAccessTokenHandler` が実行されず、問答無用で401エラーになる** という挙動になります。
+
+そこで、開発環境用に、**実際にはアクセストークンが送られてきていない場合にも、常にダミーのアクセストークンを受け取ったことにする** ための [Custom AccessTokenExtractor](https://symfony.com/doc/current/security/access_token.html#2-configure-the-token-extractor-optional) を実装します。
+
+```php
+<?php
+
+declare(strict_types=1);
+
+namespace App\Dev\Security;
+
+use Symfony\Component\HttpFoundation\Request;
+use Symfony\Component\Security\Http\AccessToken\AccessTokenExtractorInterface;
+
+class DebugAccessTokenExtractor implements AccessTokenExtractorInterface
+{
+    public function extractAccessToken(Request $request): ?string
+    {
+        return 'dummy';
+    }
+}
+```
+
+この上で、`security.yaml` の設定を以下のように変更します。
+
+```diff
+  when@dev:
+    security:
+      firewalls:
+        main:
+          access_token:
+            token_handler: App\Dev\Security\DebugAccessTokenHandler
++           token_extractors:
++             - header
++             - App\Dev\Security\DebugAccessTokenExtractor
+```
+
+これで、アクセストークンを取得する動作が、**まずデフォルトと同様にリクエストヘッダーからの取得を試み、リクエストヘッダーにアクセストークンがなければ `DebugAccessTokenExtractor` から取得する（この場合は常に `dummy` という文字列が取得される）** という挙動になります。
+
+こうしておけば、開発環境においてアクセストークンを特に送らなかった場合にもアクセストークンによる認証が必要と認識されて、意図どおり `DebugAccessHandler` に処理を渡すことができますね👌
 
 ところで、今回作成した `AccessTokenHandler` `AccessTokenExtractor` ですが、**万が一にも間違って本番環境上で実行されてしまうと、致命的なセキュリティリスクになってしまいます。**
 
@@ -216,9 +268,10 @@ services:
   App\Dev\:
     resource: '../src-dev/'
 
-  App\Dev\Security\DebugAccessTokenExtractor:
-    arguments:
-      $idaasId: '%env(DEBUG_AUTH_IDAAS_ID)%'
+  App\Dev\Security\DebugAccessTokenHandler:  
+    arguments:  
+      - '@App\Security\AccessTokenHandler'  
+      - '%env(DEBUG_AUTH_IDAAS_ID)%'
 ```
 
 ```yaml
@@ -232,22 +285,42 @@ services:
 
   App\Dev\:
     resource: '../src-dev/'
+    exclude:
+      # autoconfigure が試みられてしまうとコンストラクタ第1引数に注入すべきサービスが自動で決定できずエラーになるので
+      - '../src-dev/Security/DebugAccessTokenHandler.php'
 ```
 
 これで、
 
 * 開発環境・テスト環境においてのみ、`src-dev` 配下のクラス群がオートワイヤリングによって自動でサービスコンテナに登録される
-* 開発環境においてのみ、`DebugAccessTokenExtractor` のコンストラクタ引数に `DEBUG_AUTH_IDAASID` 環境変数の値が渡される
+* 開発環境においてのみ、`DebugAccessTokenHandler` のコンストラクタ引数に `DEBUG_AUTH_IDAAS_ID` 環境変数の値が渡される
 * （テスト環境においてのみ、すべてのサービスがデフォルトで `public`（`$container->get(サービスID)` でインスタンスを取得できる）となる）
 
 という設定ができました。
 
-これにより、`.env.local` に `DEBUG_AUTH_IDAASID={DB上の任意のユーザーのidaasIdカラムの値}` を書いておけば、開発環境においては常にそのユーザーでログインした状態で動作させることができます。
+これにより、`.env.local` に `DEBUG_AUTH_IDAAS_ID={DB上の任意のユーザーのidaasIdカラムの値}` を書いておけば、開発環境においては常にそのユーザーでログインした状態で動作させることができます。
 
-> `.env` のほうには雛形として `DEBUG_AUTH_IDAASID=` とだけ書いておく必要があります。`.env` にも `.env.local` にも `DEBUG_AUTH_IDAASID` 環境変数自体が存在しない状態だと、`services_dev.yaml` の `App\Dev\Security\DebugAccessTokenExtractor` サービスの構築がエラーになってしまうためです。
+> `.env` のほうには雛形として `DEBUG_AUTH_IDAAS_ID=` とだけ書いておく必要があります。`.env` にも `.env.local` にも `DEBUG_AUTH_IDAAS_ID` 環境変数自体が存在しない状態だと、`services_dev.yaml` の `App\Dev\Security\DebugAccessTokenHandler` サービスの構築がエラーになってしまうためです。
 >
-> `.env` にだけ `DEBUG_AUTH_IDAASID=` が書かれていて `.env.local` には何も書かれていない、という状態であれば、`DebugAccessTokenExtractor` クラスの `$idaasId` プロパティの値が `''` になり、`extractAccessToken()` メソッドの戻り値が `null` になるので、正常に認証エラーになります。
+> `.env` にだけ `DEBUG_AUTH_IDAAS_ID=` が書かれていて `.env.local` には何も書かれていない、という状態であれば、`DebugAccessTokenHandler` クラスの `$idaasId` プロパティの値は `''` になり、`getUserBadgeFrom()` メソッドは常に本体の `AccessTokenHandler` に処理を委譲するようになります。
 
-また、テスト環境においては、リクエストの `x-debug-auth-idaas-id` ヘッダーにDB上の任意のユーザーの `idaasId` カラムの値を乗せれば、リクエストごとに任意のユーザーでログインさせることができます。
+さて、テスト環境についてはここまであまり触れてきませんでしたが、実はこれ以上特別な対応は特に必要ありません。
+
+[Symfony 5.1以降](https://symfony.com/blog/new-in-symfony-5-1-simpler-login-in-tests) では、`WebTestCase::createClient()` によって得られる `KernelBrowser` クラスに `loginUser()` というメソッドが実装されており、これを使えば特に `AccessTokenHandler` を差し替えるなどの対応をせずとも任意のユーザーを擬似的にログインさせることができます。
+
+例えばテストクラス内に（あるいは基底クラスやトレイトに）以下のようなメソッドを書いておけば、必要に応じていつでも簡単に `$idaasId` を指定してユーザーをログインさせることができます。
+
+```php
+private function createAuthorizedClient(string $idaasId, KernelBrowser $client = null): KernelBrowser
+{
+    $client ??= static::createClient();
+
+    if (!($user = static::getContainer()->get(UserRepository::class)->findOneBy(['idaasId' => $idaasId]))) {
+        throw new \LogicException();
+    }
+
+    return $client->loginUser($user);
+}
+```
 
 これで開発・テストがしやすくなりましたね！🙌
