[esa2github] Update post.

--- a/articles/33250dc0a5845c.md
+++ b/articles/33250dc0a5845c.md
@@ -48,14 +48,16 @@ jobs:
 
 > APIキーはRender.comの `Account Settings > API Keys` で作れます。
 >
-> サービスIDはサービスのダッシュボードの `Settings` で見られる `Deploy Hook` のURL
+> サービスIDはサービスのダッシュボードのURL
+> `https://dashboard.render.com/web/srv-xxxxxxxxxxxxxxxxxxxx`
+> の `srv-xxxxxxxxxxxxxxxxxxxx` の部分です。ダッシュボードの `Settings` で見られる `Deploy Hook` のURL
 > `https://api.render.com/deploy/srv-xxxxxxxxxxxxxxxxxxxx?key=xxxxxxxxxxx`
-> の `srv-xxxxxxxxxxxxxxxxxxxx` の部分です。
+> の `srv-xxxxxxxxxxxxxxxxxxxx` の部分も同じです。
 
 オプション項目として
 
 * `interval` デプロイの進捗状況をポーリングする間隔（秒）（デフォルトは10秒）
-* `timeout` デプロイの進捗状況のポーリングを最大どれだけの時間待つか（秒）（デフォルトは600秒＝10分）
+* `timeout` デプロイの進捗状況のポーリングを最大どれだけの期間行うか（秒）（デフォルトは600秒＝10分）
 
 を設定できます。[Render.comのAPIのRate Limit](https://api-docs.render.com/reference/rate-limiting) が気になる場合などに適切に変更してください。
 
