[esa2github] Update post.

--- a/articles/c317b41935c617.md
+++ b/articles/c317b41935c617.md
@@ -202,7 +202,7 @@ $ yarn playwright install
     // 後略
 ```
 
-## その他のワークアラウンド
+## 3. その他のワークアラウンド
 
 最後に、「結局原因はよく分からなかったけどなぜかVercel上で期待どおり動かなかった」ことがいくつかあったので、それに対して行った対処もまとめておきます。
 
