[esa2github] Update post.

--- a/articles/c317b41935c617.md
+++ b/articles/c317b41935c617.md
@@ -87,7 +87,13 @@ export default async function handler(
 }
 ```
 
-> 前提として `yarn add playwright-core playwright-aws-lambda` が必要です。
+> 前提として
+>
+> ```shell
+> $ npm i -S playwright-core playwright-aws-lambda
+> ```
+>
+> が必要です。
 
 基本的な戦略は
 
@@ -134,7 +140,7 @@ const swr = 86400 * 31
 
 最初は `fs.readFileSync()` などを使って画像ファイルを直接読み込んでレスポンスとして返そうとしたのですが、ローカル開発環境とEdge Function上とでスクリプトファイルと `/public` ディレクトリとの位置関係が異なっていて色々面倒だったので、Playwrightで画像を開いてスクリーンショットするという対応をとっています。
 
-なお、もう一つ注意点として、ページコンポーネント側で画像を `next/image` で出力している場合、Playwrightで読み込み完了した時点でまだ画像が表示されておらずスクリーンショットに映らないということが起こるので要注意です。
+なお、もう一つ注意点として、ページコンポーネント側で画像を `next/image` で出力している場合、Playwrightで読み込み完了した時点でまだ画像が表示されておらず（next/imageの遅延読み込み機能のため）スクリーンショットに映らないということが起こるので要注意です。
 
 今回は、このページコンポーネントでは `next/image` を使わないという対応をとりました。
 
