[esa2github] Update post.

--- a/articles/c317b41935c617.md
+++ b/articles/c317b41935c617.md
@@ -149,7 +149,7 @@ const swr = 86400 * 31
 この時点で、ローカルで
 
 ```shell
-$ yarn playwright install
+$ npx playwright install
 ```
 
 して、ブラウザで `http://localhost:3000/api/og?postId=1` などにアクセスしてみると、Chromiumが立ち上がってしばらく動いたあと、もとのブラウザ側に期待どおりOGP画像が表示されます。
